--- a/config.example.toml
+++ b/config.example.toml
@@ -1,6 +1,7 @@
 [paths]
 stripped = "data/raw/stripped.gz"
 names = "data/raw/names.gz"
+keywords = "data/raw/keywords.txt"
 db = "data/processed/oeis.db"
 
 [limits]
